# CrewAi-Project

./: .gitignore  Codebase structure.md  README.md  alfred.log.md  codebase_overview.md  problems_and_solutions.md  pyproject.toml  report.md  solution.md
distressed-homes-ui/: README.md  package-lock.json  package.json
distressed-homes-ui/src/: styles.css
distressed_homes/: README.md  fix.md  pyproject.toml
distressed_homes/.github/: copilot-instructions.md  core.instructions.md
distressed_homes/src/distressed_homes/: __main__.py  crew.py  main.py
distressed_homes/src/distressed_homes/config/: agents.yaml  tasks.yaml
distressed_homes/src/distressed_homes/tools/: custom_tool.py
docs/: architecture_blueprint.md  research_summary.md
src/my_crew_project/: crew.py  main.py
src/my_crew_project/config/: agents.yaml  tasks.yaml
