[project]
name = "my_crew_project"
version = "0.1.0"
description = "my_crew_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
my_crew_project = "my_crew_project.main:run"
run_crew = "my_crew_project.main:run"
train = "my_crew_project.main:train"
replay = "my_crew_project.main:replay"
test = "my_crew_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
