[project]
name = "distressed_homes"
version = "0.1.0"
description = "distressed_homes using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=0.51.1",
    "crewai[tools]>=0.141.0,<1.0.0",
]

[project.scripts]
distressed_homes = "distressed_homes.main:run"
run_crew = "distressed_homes.main:run"
train = "distressed_homes.main:train"
replay = "distressed_homes.main:replay"
test = "distressed_homes.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
